# domain-no-deriving-strategy

./: CHANGELOG.md  README.md  cabal.project  domain-no-deriving-strategy.cabal  flake.nix  hie.yaml
app/: Main.hs
src/Core/: MyError.hs  Types.hs
test/: Spec.hs
