cabal-version:       2.4
name:                domain-no-deriving-strategy
version:             0.1.0.0
synopsis:            the session manager for detachment system.
description:         the session manager for detachment system.
homepage:            https://github.com/hughjfchen/domain-no-deriving-strategy
bug-reports:         https://github.com/hughjfchen/domain-no-deriving-strategy/issues
license:             MIT
license-file:        LICENSE
author:              Hugh JF Chen
maintainer:          Hugh JF Chen <hugh.jf.chen@gmail.com>
copyright:           2025 Hugh JF Chen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.6.7

source-repository head
  type:                git
  location:            https://github.com/hughjfchen/domain-no-deriving-strategy.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 5
                     , relude
                     , text
                     , bytestring
                     , mtl
                     , transformers
                     , containers
                     , unordered-containers
                     , exceptions
                     , aeson
                     , parsec
                     , filepath
                     , path
                     , path-io
                     , modern-uri
                     , domain
                     , domain-aeson

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveFunctor
                       DeriveDataTypeable
                       DeriveGeneric
                       DeriveLift
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       DataKinds
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       ViewPatterns
                       PatternSynonyms
                       QuasiQuotes
                       TemplateHaskell

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Core.Types
                     , Core.MyError

executable domain-no-deriving-strategy
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_session_manager
  build-depends:       domain-no-deriving-strategy
                     , optparse-applicative ^>= 0.16.1.0
                     , fast-logger
                     , time
                     , unliftio
                     , directory
                     , aeson
                     , lens
                     , lens-aeson
                     , base64-bytestring
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite domain-no-deriving-strategy-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec
  build-depends:       domain-no-deriving-strategy
                     , hspec
                     , hedgehog
                     , hspec-hedgehog
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark domain-no-deriving-strategy-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , domain-no-deriving-strategy
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
